fix-wrap

--- a/style3.css
+++ b/style3.css
@@ -21,20 +21,21 @@ main{
     flex-direction: column;
 }
 .courses{
-    flex-basis: 100%;
     display: flex;
+    flex-wrap: wrap;   
+    margin-top: 5%;
     justify-content: space-around;
 }
 
 .card{
-    background-color: rgb(33, 33, 33);
-    display: flex;
+    margin-top: 2%;
+    display:flex;
     flex-direction: column;
-    flex-basis: calc((100% - 300px)/3);
+    background-color: rgb(33, 33, 33);
+    width: 400px; 
     text-align: center;
     border: 3px solid rgb(56, 56, 56);
     border-radius: 25px;
-    margin-top: 5%;
     transition-duration: 0.5s;
 
 }
@@ -72,7 +73,7 @@ main{
     flex-direction: column;
     align-items: flex-start;
     margin-left: 25%;
-    margin-right:15%
+    margin-right:15%;
 }
 
 .info p{
@@ -88,6 +89,7 @@ main{
 .photos{
     margin-top: 10%;
     display:flex;
+    flex-wrap: wrap;
     background-color: rgb(50, 152, 242);
     flex-basis: 100%;
     justify-content: space-around;
@@ -101,6 +103,9 @@ main{
 .description{
     background-color: white;
     display: flex;
+    
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 
 .text{
